UIEH-1240 Include additional package content types

--- a/translations/ui-eholdings/en.json
+++ b/translations/ui-eholdings/en.json
@@ -390,8 +390,10 @@
     "filter.contentType.abstract": "Abstract and Index",
     "filter.contentType.ebook": "E-Book",
     "filter.contentType.ejournal": "E-Journal",
-    "filter.contentType.print": "Print",
+    "filter.contentType.mixedContent": "Mixed Content",
     "filter.contentType.onlineReference": "Online Reference",
+    "filter.contentType.print": "Print",
+    "filter.contentType.streamingMedia": "Streaming Media",
     "filter.contentType.unknown": "Unknown",
     "filter.pubType.audioBook": "Audiobook",
     "filter.pubType.book": "Book",
