--- a/translations/ui-eholdings/en.json
+++ b/translations/ui-eholdings/en.json
@@ -85,6 +85,7 @@
     "usageConsolidation.fullTextRequestUsageTable.nonPublisher": "All non-publisher platform(s) total",
     "usageConsolidation.fullTextRequestUsageTable.noResponse": "Unable to retrieve information. Please try again.",
     "package.actionMenu.edit": "Edit",
+    "package.actionMenu.exportToCSV": "Export package (CSV)",
     "package.addToHoldings": "Add to holdings",
     "package.addToken": "Add token",
     "package.removeFromHoldings": "Remove from holdings",
