--- a/translations/ui-eholdings/en.json
+++ b/translations/ui-eholdings/en.json
@@ -84,6 +84,60 @@
     "usageConsolidation.fullTextRequestUsageTable.publisher": "All publisher platform(s) total",
     "usageConsolidation.fullTextRequestUsageTable.nonPublisher": "All non-publisher platform(s) total",
     "usageConsolidation.fullTextRequestUsageTable.noResponse": "Unable to retrieve information. Please try again.",
+
+    "exportPackageResources.label": "Export settings",
+    "exportPackageResources.button.cancel": "Cancel",
+    "exportPackageResources.button.export": "Export",
+    "exportPackageResources.all": "All",
+    "exportPackageResources.subtitle": "This export may take several minutes to complete. When finished, it will be available in the <strong>Export manager</strong> app. NOTE: This export does not include information available under Usage & analysis accordion (only available to Usage Consolidation subscribers). Please use the <i>Export titles</i> option available under that accordion.",
+    "exportPackageResources.fields.package": "Package fields to export",
+    "exportPackageResources.fields.package.providerName": "Provider Name",
+    "exportPackageResources.fields.package.providerId": "Provider Id",
+    "exportPackageResources.fields.package.name": "Package Name",
+    "exportPackageResources.fields.package.id": "Package Id",
+    "exportPackageResources.fields.package.type": "Package Type",
+    "exportPackageResources.fields.package.contentType": "Package Content Type",
+    "exportPackageResources.fields.package.holdingStatus": "Holdings status",
+    "exportPackageResources.fields.package.customCoverage": "Custom Coverage",
+    "exportPackageResources.fields.package.showToPatrons": "Show To Patrons",
+    "exportPackageResources.fields.package.automaticallySelectTitles": "Automatically Select titles",
+    "exportPackageResources.fields.package.proxy": "Proxy",
+    "exportPackageResources.fields.package.accessStatusType": "Access Status Type",
+    "exportPackageResources.fields.package.tags": "Tags",
+    "exportPackageResources.fields.package.agreements": "Agreements",
+    "exportPackageResources.fields.package.notes": "Notes",
+    "exportPackageResources.fields.title": "Title fields to export",
+    "exportPackageResources.fields.title.titleName": "Title name",
+    "exportPackageResources.fields.title.alternateTitles": "Alternate title(s)",
+    "exportPackageResources.fields.title.titleId": "Title ID",
+    "exportPackageResources.fields.title.publicationType": "Publication Type",
+    "exportPackageResources.fields.title.titleType": "Title Type",
+    "exportPackageResources.fields.title.holdingStatus": "Holdings Status",
+    "exportPackageResources.fields.title.showToPatron": "Show to patron",
+    "exportPackageResources.fields.title.managedCoverageDates": "Managed coverage dates",
+    "exportPackageResources.fields.title.managedEmbargo": "Managed Embargo",
+    "exportPackageResources.fields.title.customCoverageDates": "Custom coverage dates",
+    "exportPackageResources.fields.title.customEmbargo": "Custom Embargo",
+    "exportPackageResources.fields.title.coverageStatement": "Coverage statement",
+    "exportPackageResources.fields.title.proxy": "Proxy",
+    "exportPackageResources.fields.title.url": "URL",
+    "exportPackageResources.fields.title.accessStatusType": "Access status type",
+    "exportPackageResources.fields.title.tags": "Tags",
+    "exportPackageResources.fields.title.contributors": "Contributors",
+    "exportPackageResources.fields.title.edition": "Edition",
+    "exportPackageResources.fields.title.publisher": "Publisher",
+    "exportPackageResources.fields.title.issn_print": "ISSN_Print",
+    "exportPackageResources.fields.title.issn_online": "ISSN_Online",
+    "exportPackageResources.fields.title.isbn_print": "ISBN_Print",
+    "exportPackageResources.fields.title.isbn_online": "ISBN_Online",
+    "exportPackageResources.fields.title.subjects": "Subjects",
+    "exportPackageResources.fields.title.peerReviewed": "Peer reviewed",
+    "exportPackageResources.fields.title.description": "Description",
+    "exportPackageResources.fields.title.customLabel": "Custom label",
+    "exportPackageResources.fields.title.agreements": "Agreements",
+    "exportPackageResources.fields.title.notes": "Notes",
+    "exportPackageResources.fields.all": "Export all fields",
+    "exportPackageResources.fields.selected": "Export selected fields",
     "package.actionMenu.edit": "Edit",
     "package.actionMenu.exportToCSV": "Export package (CSV)",
     "package.addToHoldings": "Add to holdings",
