--- a/translations/ui-eholdings/en.json
+++ b/translations/ui-eholdings/en.json
@@ -90,6 +90,8 @@
     "exportPackageResources.button.export": "Export",
     "exportPackageResources.all": "All",
     "exportPackageResources.subtitle": "This export may take several minutes to complete. When finished, it will be available in the <strong>Export manager</strong> app. NOTE: This export does not include information available under Usage & analysis accordion (only available to Usage Consolidation subscribers). Please use the <i>Export titles</i> option available under that accordion.",
+    "exportPackageResources.toast.success": "Your <b>eholdings export (Job ID: {jobName})</b> is in progress and will be available on the <b>Export manager</b> app. The export may take several minutes to complete.",
+    "exportPackageResources.toast.fail": "The export request has failed. Please try again.",
     "exportPackageResources.fields.package": "Package fields to export",
     "exportPackageResources.fields.package.providerName": "Provider Name",
     "exportPackageResources.fields.package.providerId": "Provider Id",
