UIEH-1328: Resource (aka title+package) Detail Record: Add Alternate title(s) field

--- a/translations/ui-eholdings/en.json
+++ b/translations/ui-eholdings/en.json
@@ -407,6 +407,7 @@
     "label.titles": "Titles",
     "label.totalTitles": "Total titles: {count}",
     "label.isxn": "ISSN/ISBN",
+    "label.alternateTitle": "Alternate title(s)",
     "label.edition": "Edition",
     "label.publisher": "Publisher",
     "label.package": "Package",
