UIEH-1350: Add a Packages facet to Titles tab

--- a/translations/ui-eholdings/en.json
+++ b/translations/ui-eholdings/en.json
@@ -288,6 +288,7 @@
     "tags.addTagFor": "Add tag for: <strong>{filter}</strong>",
     "tags.filter": "Tags filter",
     "accessTypes.filter": "Access status types filter",
+    "packages.filter": "Packages",
 
     "settings.goBackToEholdings": "Go back to eHoldings settings",
     "settings.customLabels.displayLabel": "Display label",
