UIEH-1381 Fix some dropdown field using translations as values

--- a/translations/ui-eholdings/en.json
+++ b/translations/ui-eholdings/en.json
@@ -432,10 +432,10 @@
     "label.search": "Search",
     "label.accordionList": "Records found",
     "label.identifiers": "Identifiers",
-    "label.identifier.issnOnline": "ISSN (Online)",
-    "label.identifier.issnPrint": "ISSN (Print)",
-    "label.identifier.isbnOnline": "ISBN (Online)",
-    "label.identifier.isbnPrint": "ISBN (Print)",
+    "label.identifier.issn_online": "ISSN (Online)",
+    "label.identifier.issn_print": "ISSN (Print)",
+    "label.identifier.isbn_online": "ISBN (Online)",
+    "label.identifier.isbn_print": "ISBN (Print)",
     "label.removeItem": "Remove {item}",
     "label.icon.goBack": "Go back",
     "label.icon.closeX": "Close {paneTitle}",
@@ -458,23 +458,23 @@
     "filter.contentType.abstract": "Abstract and Index",
     "filter.contentType.ebook": "E-Book",
     "filter.contentType.ejournal": "E-Journal",
-    "filter.contentType.mixedContent": "Mixed Content",
-    "filter.contentType.onlineReference": "Online Reference",
+    "filter.contentType.mixed_content": "Mixed Content",
+    "filter.contentType.online_reference": "Online Reference",
     "filter.contentType.print": "Print",
-    "filter.contentType.streamingMedia": "Streaming Media",
+    "filter.contentType.streaming_media": "Streaming Media",
     "filter.contentType.unknown": "Unknown",
-    "filter.pubType.audioBook": "Audiobook",
+    "filter.pubType.audiobook": "Audiobook",
     "filter.pubType.book": "Book",
-    "filter.pubType.bookSeries": "Book Series",
+    "filter.pubType.book_series": "Book Series",
     "filter.pubType.database": "Database",
     "filter.pubType.journal": "Journal",
     "filter.pubType.newsletter": "Newsletter",
     "filter.pubType.newspaper": "Newspaper",
     "filter.pubType.proceedings": "Proceedings",
     "filter.pubType.report": "Report",
-    "filter.pubType.streamingAudio": "Streaming Audio",
-    "filter.pubType.streamingVideo": "Streaming Video",
-    "filter.pubType.thesisdissertation": "Thesis \u0026 Dissertation",
+    "filter.pubType.streaming_audio": "Streaming Audio",
+    "filter.pubType.streaming_video": "Streaming Video",
+    "filter.pubType.thesis_dissertation": "Thesis \u0026 Dissertation",
     "filter.pubType.website": "Website",
     "filter.pubType.unspecified": "Unspecified",
     "filter.resetAll": "Reset all",
