--- a/translations/ui-eholdings/en.json
+++ b/translations/ui-eholdings/en.json
@@ -22,11 +22,11 @@
     "shortcut.find": "Find",
     "agreements": "Agreements",
     "agreements.notFound": "No agreements found",
-    "agreements.unlink": "Unlink agreement from this record.",
-    "agreements.unassignModal.header": "Unassign an agreement from this record",
-    "agreements.unassignModal.description": "Are you sure you want to unassign <strong>{agreementName}</strong> from <strong>{recordName}</strong>? Once you unsassign, the agreement will no longer be attached to this record.",
-    "agreements.unassignModal.cancel": "Cancel",
-    "agreements.unassignModal.unassign": "Unassign",
+    "agreements.delete": "Delete agreement line",
+    "agreements.deleteModal.header": "Delete agreement line",
+    "agreements.deleteModal.description": "Are you sure you want to delete this agreement line: <strong>{recordName}</strong>?",
+    "agreements.deleteModal.cancel": "Cancel",
+    "agreements.deleteModal.delete": "Delete",
     "usageConsolidation": "Usage & analysis",
     "usageConsolidation.filters.year": "Year",
     "usageConsolidation.filters.platformType": "Platform",
