--- a/translations/ui-eholdings/en.json
+++ b/translations/ui-eholdings/en.json
@@ -27,6 +27,8 @@
     "agreements.deleteModal.description": "Are you sure you want to delete this agreement line: <strong>{recordName}</strong>?",
     "agreements.deleteModal.cancel": "Cancel",
     "agreements.deleteModal.delete": "Delete",
+    "agreements.accordion.new": "Creates a new agreement and then adds eHoldings package/title record as an Agreement Line to it",
+    "agreements.accordion.add": "Adds eHoldings package/title record as an Agreement Line to another Agreement",
     "usageConsolidation": "Usage & analysis",
     "usageConsolidation.filters.year": "Year",
     "usageConsolidation.filters.platformType": "Platform",
