--- a/translations/ui-eholdings/en.json
+++ b/translations/ui-eholdings/en.json
@@ -624,9 +624,9 @@
     "permission.settings.kb": "Settings (eHoldings): Can create, edit, and view knowledge base credentials",
     "permission.settings.kb.delete": "Settings (eHoldings): Can delete knowledge base credentials",
     "permission.settings.root-proxy": "Settings (eHoldings): configure root proxy setting",
-    "permission.package-title.execute": "eHoldings: Can select/unselect packages and titles to/from your holdings",
+    "permission.package-title.select-unselect.execute": "eHoldings: Can select/unselect packages and titles to/from your holdings",
     "permission.records.edit": "eHoldings: Can edit providers, packages, titles detail records",
-    "permission.titles-packages.manage": "eHoldings: Can create and delete custom packages and titles",
+    "permission.titles-packages.create-delete.manage": "eHoldings: Can create and delete custom packages and titles",
     "permission.costperuse.view": "eHoldings: Can view Usage & analysis data for packages, titles and resources",
     "permission.settings.access-types.all": "Settings (eholdings): Can create, edit, view, and delete access status types",
     "permission.settings.access-types.create-edit": "Settings (eholdings): Can create, edit, and view access status types",
