--- a/translations/ui-eholdings/en.json
+++ b/translations/ui-eholdings/en.json
@@ -638,5 +638,10 @@
     "permission.settings.assignedUser": "Settings (eHoldings): Can assign/unassign a user from a KB",
 
     "actionMenu.label": "Actions",
-    "actionMenu.filterBadgeTooltip": "{count} applied {count, plural, one {filter} other {filters}}"
-  }
+    "actionMenu.filterBadgeTooltip": "{count} applied {count, plural, one {filter} other {filters}}",
+    "titlesList.title": "Title",
+    "titlesList.status": "Status",
+    "titlesList.managedCoverage": "Managed coverage dates",
+    "titlesList.customCoverage": "Custom coverage dates",
+    "titlesList.managedEmbargo": "Managed embargo period"
+}
