UIEH-1449 set a correct label for tags column

--- a/translations/ui-eholdings/en.json
+++ b/translations/ui-eholdings/en.json
@@ -644,5 +644,5 @@
     "titlesList.managedCoverage": "Managed coverage",
     "titlesList.customCoverage": "Custom coverage",
     "titlesList.managedEmbargo": "Managed embargo period",
-    "titlesList.tags": "Tags"
+    "titlesList.tags": "Tag(s)"
 }
