UIEH-1449 Package Record - Titlelist Display - Add Column for Tags and few column width adjustments. (#1768)
* UIEH-1449 Package Record - Titlelist Display - Add Column for Tags and few column width adjustments.

* UIEH-1449 set a correct label for tags column

* UIEH-1449 fix failing tests

--- a/translations/ui-eholdings/en.json
+++ b/translations/ui-eholdings/en.json
@@ -641,7 +641,8 @@
     "actionMenu.filterBadgeTooltip": "{count} applied {count, plural, one {filter} other {filters}}",
     "titlesList.title": "Title",
     "titlesList.status": "Status",
-    "titlesList.managedCoverage": "Managed coverage dates",
-    "titlesList.customCoverage": "Custom coverage dates",
-    "titlesList.managedEmbargo": "Managed embargo period"
+    "titlesList.managedCoverage": "Managed coverage",
+    "titlesList.customCoverage": "Custom coverage",
+    "titlesList.managedEmbargo": "Managed embargo period",
+    "titlesList.tags": "Tag(s)"
 }
