UIEH-1463 Package detail record > Titles accordion > Change Publication type radio button filter to single select

--- a/translations/ui-eholdings/en.json
+++ b/translations/ui-eholdings/en.json
@@ -423,7 +423,7 @@
     "label.packages": "Packages",
     "label.totalPackages": "Total packages: {count}",
     "label.provider": "Provider",
-    "label.publicationType": "Publication Type",
+    "label.publicationType": "Publication type",
     "label.subjects": "Subjects",
     "label.subject": "Subject",
     "label.peerReviewed": "Peer reviewed",
